Added private: true to package.json
This "module" is not meant to be published to npm!

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   ],
   "author": "Norman Dela Cruz",
   "license": "GPL-3.0",
+  "private": true,
   "bugs": {
     "url": "https://github.com/dcnr/FreeCodeCamp/issues"
   },
