Basic Bonfire: Ceasar's Cipher
In this bonfire we implement rot13.

rot13(encodedStr) accepts one parameter
1. encodedStr, string, the encoded string to be decoded

rot13() returns the deciphered string.

--- a/.jshintrc
+++ b/.jshintrc
@@ -1,3 +1,18 @@
 {
-	"esnext": true
+  "esnext": true,
+  "strict": true,
+  "node": true,
+  "mocha": true,
+  "curly": true,
+  "eqeqeq": true,
+  "forin": true,
+  "freeze": true,
+  "latedef": true,
+  "maxdepth": 2,
+  "nonew": true,
+  "notypeof": true,
+  "singleGroups": true,
+  "undef": true,
+  "unused": true,
+  "varstmt": true
 }
