Changed license GPL-3.0 to LGPL-3.0

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "javascript"
   ],
   "author": "Norman Dela Cruz",
-  "license": "GPL-3.0",
+  "license": "LGPL-3.0",
   "private": true,
   "bugs": {
     "url": "https://github.com/dcnr/FreeCodeCamp/issues"
